--- a/public/testindex.html
+++ b/public/testindex.html
@@ -11,17 +11,15 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-		<link rel="stylesheet" href="styles/fullcalendar.min.css">
-		<link rel="stylesheet" href="styles/fullcalendar.print.min.css">
+		<script src='js/fullcalendar.js'></script>
+		<link rel='stylesheet' href='styles/fullcalendar.css' />
 		<link rel="stylesheet" type="text/css" href="styles/styles.css">
-		
 
 		
 	</head>
 
 <body>
   <div id='calendar'></div>
-  <script src="js/fullcalendar.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 
