--- a/public/form.html
+++ b/public/form.html
@@ -14,14 +14,14 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css"></script> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-    <form action="/action_page.php">
+    <form>
         <div class="form-group">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Client name..">
@@ -39,8 +39,11 @@
                 <input type="tel" id="phone_num" name="phone_num" required/>
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <!-- <button type="submit" class="btn btn-default" id="userSubmit">Submit</button> -->
     </form>
+    <button  class="btn btn-default" id="userSubmit">Submit</button>
 </body>
+
+<script src="./js/app.js"></script>
 
 </html>
