--- a/public/form.html
+++ b/public/form.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <form>
+    <form name="clientForm" onsubmit="return validateForm()">
         <div class="form-group">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Client name..">
@@ -39,7 +39,6 @@
                 <input type="tel" id="phone_num" name="phone_num" required/>
         </div>
 
-        <!-- <button type="submit" class="btn btn-default" id="userSubmit">Submit</button> -->
     </form>
     <button  class="btn btn-default" id="userSubmit">Submit</button>
 </body>
